--- a/style.css
+++ b/style.css
@@ -9,14 +9,14 @@ h1 {
     padding: 20px 0;
     border-bottom: 1px solid rgba(190, 190, 190, 0.5);
     box-shadow: 0px 0px 5px 0px rgba(190, 190, 190, 0.75);
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 .grid-container {
     display: grid;
     width: 300px;
     height: 300px;
-    margin: 15px auto;
+    margin: 10px auto;
     grid-template-columns: repeat(3, calc(300px / 3));
     grid-template-rows: repeat(3, calc(300px / 3));
     grid-gap: 1px;
@@ -44,16 +44,20 @@ h1 {
 .message {
     background-color: rgb(209, 209, 209);
     width: 300px;
-    margin: 0 auto;
     text-align: center;
-    padding: 20px;
-    font-size: 20px;
+    padding: 8px;
+    font-size: 18px;
     color: indigo;
     font-weight: bold;
-    /* opacity: 0;  */
-    /* transition: 0.2s; */
-    animation: anime 0.5s;
+    animation: anime 0.5s forwards;
     animation-play-state: paused;
+    /* position: absolute;
+    top: 48%;
+    left: 38.2%;
+    transform: translate(-50% -50%);
+    z-index: 1000; */
+    color: goldenrod;
+    margin: auto;
 }
 
 @keyframes anime {
@@ -68,6 +72,54 @@ h1 {
     }
 }
 
-.advice {
+.controlUnit {
+    border: 1px solid goldenrod;
+    width: 300px;
+    margin: 0 auto;
+    padding: 5px 10px;
     text-align: center;
+}
+
+.overlay {
+    content: '';
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.9);
+    z-index: 0;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.blinkingLight {
+    font-size: 100px;
+    color: rgb(248, 236, 204);
+    margin: -150px 0 -20px;
+    display: inline-block;
+}
+
+.pc {
+    display: inline-block;
+    margin-top: 10px;
+    margin-bottom: 0;
+}
+
+.pc .mode {
+    padding: 0 5px;cursor: pointer;
+    color: goldenrod;
+    width: 50px;
+}
+
+.playAgain {
+    padding: 2px 10px;
+    margin: 5px 0 0;
+    border: 1px solid black;
+    border-radius: 2px;
+    transition: 0.3s;
+}
+
+.playAgain:hover {
+    background-color: goldenrod;
+    color: aliceblue;
 }
