--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -33,7 +35,7 @@ h1 {
     font-size: 48px;
     color: goldenrod;
     text-shadow:
-    -1px -1px 0 #000,  
+    -1px -1px 0 #000,
      1px -1px 0 #000,
      -1px 1px 0 #000,
      1px 1px 0 #000;
@@ -58,11 +60,13 @@ h1 {
     z-index: 1000; */
     color: goldenrod;
     margin: auto;
+    /* backface-visibility: hidden; */
+    box-shadow: 1px 1px 5px 0 grey;
 }
 
 @keyframes anime {
     0% {
-        transform: scale(0);
+        transform: scale(0)
     }
     75% {
         transform: scale(1.2);
@@ -76,8 +80,11 @@ h1 {
     border: 1px solid goldenrod;
     width: 300px;
     margin: 0 auto;
-    padding: 5px 10px;
+    padding: 8px 10px;
     text-align: center;
+    background-color: rgb(32, 32, 32);
+    color: blanchedalmond;
+    position: relative;
 }
 
 .overlay {
@@ -94,21 +101,43 @@ h1 {
 
 .blinkingLight {
     font-size: 100px;
-    color: rgb(248, 236, 204);
-    margin: -150px 0 -20px;
+    /* color: rgb(253, 185, 185); */
+    color: black;
     display: inline-block;
+    transition: 0.15s;
+    text-shadow: 0px 0px 2px rgba(255, 255, 255, 0.452);
+    /* z-index: -10; */
+    position: absolute;
+    top: -65%;
+    left: 75%;
 }
 
 .pc {
     display: inline-block;
     margin-top: 10px;
-    margin-bottom: 0;
+    margin-left: -25px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 100;
+    font-size: 13px;
 }
 
 .pc .mode {
     padding: 0 5px;cursor: pointer;
-    color: goldenrod;
+    color: rgb(255, 205, 79);
     width: 50px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 200;
+    background-color: rgb(0, 0, 0);
+    /* border: 1px solid rgb(255, 205, 79); */
+    box-shadow: none;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    margin-left: 5px;
+    margin-right: 5px;
+    transition: 0.2s;
+}
+
+.pc .mode:active {
+    transform: scale(0.9);
 }
 
 .playAgain {
@@ -117,9 +146,40 @@ h1 {
     border: 1px solid black;
     border-radius: 2px;
     transition: 0.3s;
+    font-family: 'Montserrat', sans-serif;
+
 }
 
 .playAgain:hover {
     background-color: goldenrod;
     color: aliceblue;
+}
+
+.advice {
+    background-color: crimson;
+    display: inline-block;
+    padding: 3px 10px;
+    width: 67%;
+    cursor: pointer;
+    position: absolute;
+    top: 7%;
+    left: 50%;
+    transform: translate(-50%);
+    z-index: 10;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 100;
+    letter-spacing: 2px;
+    word-spacing: 3px;
+}
+
+.advice:active {
+    transform: translate(-50%) scale(0.98);
+}
+
+.advice, .grid-item, .blinkingLight {
+    user-select: none; /* standard syntax */
+    -webkit-user-select: none; /* webkit (safari, chrome) browsers */
+    -moz-user-select: none; /* mozilla browsers */
+    -khtml-user-select: none; /* webkit (konqueror) browsers */
+    -ms-user-select: none; /* IE10+ */
 }
