--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ h1 {
     transform: translate(-50%) scale(0.98);
 }
 
-.advice, .grid-item, .blinkingLight {
+.advice, .grid-item, .blinkingLight, .pc .mode {
     user-select: none; /* standard syntax */
     -webkit-user-select: none; /* webkit (safari, chrome) browsers */
     -moz-user-select: none; /* mozilla browsers */
