--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Changa:wght@200&display=swap');
 
 * {
     margin: 0;
@@ -8,17 +9,17 @@
 
 h1 {
     text-align: center;
-    padding: 20px 0;
+    padding: 10px 0;
     border-bottom: 1px solid rgba(190, 190, 190, 0.5);
     box-shadow: 0px 0px 5px 0px rgba(190, 190, 190, 0.75);
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .grid-container {
     display: grid;
     width: 300px;
     height: 300px;
-    margin: 10px auto;
+    margin: 5px auto 10px;
     grid-template-columns: repeat(3, calc(300px / 3));
     grid-template-rows: repeat(3, calc(300px / 3));
     grid-gap: 1px;
@@ -85,6 +86,7 @@ h1 {
     background-color: rgb(32, 32, 32);
     color: blanchedalmond;
     position: relative;
+    box-shadow: 8px 5px 10px 0px rgba(128, 128, 128, 0.3);
 }
 
 .overlay {
@@ -108,13 +110,13 @@ h1 {
     text-shadow: 0px 0px 2px rgba(255, 255, 255, 0.452);
     /* z-index: -10; */
     position: absolute;
-    top: -65%;
+    top: -40%;
     left: 75%;
 }
 
 .pc {
     display: inline-block;
-    margin-top: 10px;
+    margin-top: 15px;
     margin-left: -25px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 100;
@@ -182,4 +184,12 @@ h1 {
     -moz-user-select: none; /* mozilla browsers */
     -khtml-user-select: none; /* webkit (konqueror) browsers */
     -ms-user-select: none; /* IE10+ */
+}
+
+.score {
+    font-family: 'Changa', sans-serif;
+    font-weight: 100;
+    font-size: 9px;
+    margin-top: 10px;
+    letter-spacing: 2px;
 }
